Timer is working

--- a/questionsTrivia.html
+++ b/questionsTrivia.html
@@ -18,7 +18,7 @@
         </div>
         <div class="row" id="timeRemaining">
             <h1>Time Remaining: </h1>
-
+            <p id ="timer"></p>
         </div>
         <div class="row">
             <h4>
