--- a/endResult.html
+++ b/endResult.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,23 +9,15 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Document</title>
 </head>
-
 <body>
+    <h1> Thanks for playing the game!</h1>
+    <h3 id ="correct">Correct Answers: </h3>
+    <h3 id ="incorrect"> Incorrect Answers :</h3>
+    <h3 id="answered"> Answered Questions :</h3>
+    <h3 id="unanswered"> Unanswered Questions :</h3>
 
-    <div class="container">
-        <div class="row">
-            <h1>Trivia Trivia Trivia!</h1>
-        </div>
-       <button type="submit" class="btn btn-primary">Start</button>
-       <div class="row" id="timer"></div>
-       <div class="row" id="triviaGame"></div>
-       <a href ="endResult.html"> <button type="submit" class="btn btn-primary">Done</button></a>
-    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="assets/javascript/triviaQuestions.js"></script>
     <script src="assets/javascript/app.js"></script>
-    
-
+    <script src="assets/javascript/triviaQuestions.js"></script>
 </body>
-
 </html>
