--- a/index.html
+++ b/index.html
@@ -1,32 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <div class="container">
-        <div class="row">
-            <h1>Trivia Trivia Trivia!</h1>
+      <div class="row">
+        <div class="col">
+          <h1>Trivia Trivia Trivia!</h1>
+          <button type="submit" id="startButton" class="btn btn-primary">
+            Start
+          </button>
         </div>
-       <button type="submit" class="btn btn-primary">Start</button>
-       <div class="row" id="timer"></div>
-       <div class="row" id="triviaGame"></div>
-       <a href ="endResult.html"> <button type="submit" class="btn btn-primary">Done</button></a>
+      </div>
+      <div class="row">
+        <div class="col" id="timer">
+          <h2>10</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col" id="triviaGame">
+          <h2>Click start to begin.</h2>
+        </div>
+      </div>
+      <button class="btn btn-primary" id="questioButton">
+        Submit Answer
+      </button>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/javascript/triviaQuestions.js"></script>
     <script src="assets/javascript/app.js"></script>
-    
-
-</body>
-
+  </body>
 </html>
